# ltx-2-mlx

./: .gitignore  CLAUDE.md  README.md  app.py  app_refactored.py  run.sh  storyboard_cat.json  storyboard_pipeline.py  storyboard_test.json
configs/: webui.yaml
docs/comparison/: keyframe_divergences.md
docs/superpowers/plans/: 2026-04-12-joint-workflow-plan.md  2026-04-13-flash-video-plan.md
docs/superpowers/specs/: 2026-03-31-storyboard-pipeline-design.md  2026-04-03-ltx2-web-ui-design.md  2026-04-12-joint-workflow-design.md  2026-04-13-flash-video-design.md
scripts/keyframe_tests/: generate_fixtures.py  run_matrix.py
tests/: conftest.py  test_generate.py  test_generate_real_prompt.py  test_generate_with_rope.py  test_pipeline_e2e.py  test_positions.py  test_trainer_core.py  test_trainer_datasets.py  test_two_stage.py  test_weight_loading.py
tools/flux-klein9b/: README.md  download_model.sh  generate.py  pyproject.toml  test_env.py
webui/: __init__.py  config.py  prompts.py  state.py
webui/generators/: __init__.py  base.py  flux.py  ltx.py
webui/ui/: __init__.py
webui/workflows/: __init__.py
