[project]
name = "flux-klein9b"
version = "0.1.0"
description = "FLUX.2 klein 9B image generation using Diffusers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "diffusers>=0.30.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
]

[tool.uv]
package = false
